# rtf_tokenize

./: README.md  rtf_tokenize.c  setup.cfg  setup.py
.github/workflows/: wheels.yml
test/: test_tokenizer.py
