[metadata]
name = rtf_tokenize
version = 1.0.0
description = Simple RTF tokenizer
long_description = file: README.md
long_description_content_type = text/markdown
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/rtf_tokenize
project_urls =
	Source Code = https://github.com/benoit-pierre/rtf_tokenize
	Issue Tracker = https://github.com/benoit-pierre/rtf_tokenize/issues
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords = plover

[options]
zip_safe = True
python_requires = >=3.6

[options.extras_require]
test =
	pytest>=3.0.1

[tool:pytest]
addopts = -ra

# vim: commentstring=#\ %s list
